<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        tools:context=".activity.StartActivity">
    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/city_search"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Space android:layout_width="20dp" android:layout_height="0dp"/>
        <android.support.v7.widget.SearchView
                app:queryHint="@string/query_hint"
                android:id="@+id/search_view_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <Space android:layout_width="0dp" android:layout_height="20dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/units"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <RadioGroup
                android:id="@+id/radio_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioButton
                    android:id="@+id/radio_us"
                    android:text="@string/unit_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <RadioButton
                    android:id="@+id/radio_si"
                    android:text="@string/unit_si"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>
    <Button
            android:layout_marginTop="20dp"
            android:id="@+id/action_save"
            android:text="@string/save"
            android:background="@color/primaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:layout_marginTop="20dp"
            android:id="@+id/action_cancel"
            android:text="@string/cancel"
            android:background="@color/primaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>